# CV

./: CMakeLists.txt
HW/docker_worm/: Dockerfile  docker-compose.yml  worm_server.cpp
HW/hw001/: Cuboid3d.cpp  Cuboid3d.h  README.md  main.cpp  scane.cpp  scane.h
HW/hw002/: main.cpp  utils002.cpp  utils002.h
HW/hw003/: PnPGenerator.py  main.cpp  outlierGenerator.py  regressionDrawer.cpp  regressionDrawer.h  task4.cpp  task4.h  task4generator.py  utils003.cpp  utils003.h
HW/hw004/: findCalibrationMatrix.py  goonPoinst2track.py  main.cpp  triangulation.py  utils002.cpp  utils002.h
HW/hw005/: distorsion.cpp  distortion.h  kf.cpp  kf.h  main.cpp  utils005.cpp  utils005.h
include/: cv_types.h  data_path.h
